--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.0",
     "description": "Frontend part of Patreon-like app",
     "main": "server/index.js",
+    "type": "module",
     "scripts": {
         "start": "node server/index.js",
         "start-dev": "nodemon server/index.js"
