--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "server/index.js",
     "type": "module",
     "scripts": {
-        "start": "node server/index.js",
+        "start": "node server/index.js -b",
         "start-dev": "nodemon server/index.js"
     },
     "author": "",
