--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "license": "ISC",
     "dependencies": {
         "express": "^4.18.3",
+        "handlebars": "^4.7.8",
         "nodemon": "^3.1.0"
     }
 }
